--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,5 +50,5 @@ steps:
     action: 'create'
     target: '$(Build.SourceVersion)'
     tagSource: 'auto'
-    assets: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+    assets: 'bin/Release/netcoreapp2.1\publish.zip'
     addChangeLog: true
