--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,13 +3,13 @@
   "tasks": [
     {
       "label": "clean",
-      "command": "dotnet clean",
+      "command": "dotnet clean ContactMe.csproj",
       "type": "shell",
       "problemMatcher": "$msCompile"
     },
     {
       "label": "build",
-      "command": "dotnet build",
+      "command": "dotnet build ContactMe.csproj",
       "type": "shell",
       "dependsOn": "clean",
       "group": {
@@ -20,13 +20,13 @@
     },
     {
       "label": "clean release",
-      "command": "dotnet clean --configuration Release",
+      "command": "dotnet clean --configuration Release ContactMe.csproj",
       "type": "shell",
       "problemMatcher": "$msCompile"
     },
     {
       "label": "publish",
-      "command": "dotnet publish --configuration Release",
+      "command": "dotnet publish --configuration Release ContactMe.csproj",
       "type": "shell",
       "dependsOn": "clean release",
       "problemMatcher": "$msCompile"
@@ -35,7 +35,7 @@
       "type": "func",
       "dependsOn": "build",
       "options": {
-        "cwd": "${workspaceFolder}/bin/Debug/netcoreapp2.1"
+        "cwd": "${workspaceFolder}/bin/Debug/net8.0"
       },
       "command": "host start",
       "isBackground": true,
