--- a/ContactMe.csproj
+++ b/ContactMe.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-    <AzureFunctionsVersion>v2</AzureFunctionsVersion>
+    <TargetFramework>net8.0</TargetFramework>
+    <AzureFunctionsVersion>v4</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.29" />
-    <PackageReference Include="SendGrid" Version="9.11.0" />
-    <PackageReference Include="StrongGrid" Version="0.66.0" />
+    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.6.0" />
+    <PackageReference Include="SendGrid" Version="9.29.3" />
+    <PackageReference Include="StrongGrid" Version="0.111.0" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
