--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,7 +52,7 @@ steps:
 - task: GitHubRelease@1
   displayName: 'Mark release on GitHub'
   inputs:
-    gitHubConnection: 'GitHub'
+    gitHubConnection: 'github.com_brnbrns'
     repositoryName: '$(Build.Repository.Name)'
     action: 'create'
     target: '$(Build.SourceVersion)'
